DoNothing.css: Sort of fix canvas CSS
Canvas element should take up whole element instead of being stretched.

Of course now we have to deal with the bug with the interaction between
right content and the seekbar...

--- a/ClientApp/src/components/DoNothing.css
+++ b/ClientApp/src/components/DoNothing.css
@@ -4,8 +4,14 @@
 }
 
 .content {
-    border: 1px solid blue;
     width: 98vw;
+}
+
+.rLowContent {
+    width: 28vw;
+    height: 27vh;
+    position: relative;
+    border: 1px solid blue;
 }
 
 .wrapContent {
